waitq uses interrupt handler now